added login page

--- a/CodeRoulette/views/login.html
+++ b/CodeRoulette/views/login.html
@@ -22,8 +22,8 @@
 
     <div class="grid__container">
 
-      <form action="" method="post" class="form form--login">
-		<p style="font-size: 1.5em;text-align:center;">Welcome to CodeRoulette</p>
+      <form action="views/main.html" method="post" class="form form--login">
+		<p style="font-size: 3.5em;text-align:center;">Welcome to CodeRoulette!</p>
         <div class="form__field">
           <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
           <input id="login__username" type="text" class="form__input" placeholder="Username" required>
