Users can input their name

--- a/CodeRoulette/views/login.html
+++ b/CodeRoulette/views/login.html
@@ -31,6 +31,29 @@
 
 	
 <p style="font-size: 3.5em;text-align:center;">Welcome to CodeRoulette!</p>
+
+	<!--<form method="post" action="/main.html">-->
+	<form action="/main.html" method="post" class="form form--login">
+
+	        <div class="form__field">
+			<label class="fontawesome-user" for="username"><span class="hidden">Name</span></label>
+			<input id="login__username" type="text" name="test" class="form__input" placeholder="Username" required>
+            </div>
+			
+			<!--<div class="form__field">
+			<label class="fontawesome-user" for="password"><span class="hidden">Password</span></label>
+			<input id="login__username" type="text" name="pass" class="form__input" placeholder="Password" required>
+            </div>-->
+			
+			<div class="form__field">
+            <input type="submit" value="Sign In">
+            </div>
+
+	</form>
+
+
+<!--
+
       <form action="/main.html" method="post" class="form form--login">
 		
         <div class="form__field">
@@ -49,6 +72,8 @@
         </div>
 
       </form>
+	  
+	  -->
 
       <p class="text--center">Not a member? <a href="#">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
 
